@@ -45,19 +45,27 @@ define( function( require ) {
 
     // Beaker and the stuff that is positioned relative to it. Offset constants were tweaked via visual inspection.
     thisModel.beaker = new Beaker( new Vector2( 720, 575 ), new Dimension2( 450, 300 ) );
+
+    // Dropper above the beaker
     var yDropper = thisModel.beaker.location.y - thisModel.beaker.size.height - 15;
     thisModel.dropper = new Dropper( Solute.CHICKEN_SOUP,
       new Vector2( thisModel.beaker.location.x - 50, yDropper ),
       new Bounds2( thisModel.beaker.left + 40, yDropper, thisModel.beaker.right - 200, yDropper ) );
+
+    // Solution in the beaker
     thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume );
+
+    // Water faucet at the beaker's top-right
     thisModel.waterFaucet = new Faucet( new Vector2( thisModel.beaker.right - 50, thisModel.beaker.location.y - thisModel.beaker.size.height - 45 ),
       thisModel.beaker.right + 400,
       { enabled: thisModel.solution.volumeProperty.get() < thisModel.beaker.volume } );
+
+    // Drain faucet at the beaker's bottom-left.
     thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.left - 75, thisModel.beaker.location.y + 43 ), thisModel.beaker.left,
       { enabled: thisModel.solution.volumeProperty.get() > 0 } );
 
-    // pH meter
-    var pHMeterLocation = new Vector2( 120, 75 );
+    // pH meter to the left of the drain faucet
+    var pHMeterLocation = new Vector2( thisModel.drainFaucet.location.x - 300, 75 );
     thisModel.pHMeter = new PHMeter( pHMeterLocation, new Vector2( pHMeterLocation.x + 150, thisModel.beaker.location.y ),
       PHScaleConstants.LAYOUT_BOUNDS );
 
