@@ -1,3 +1,4 @@
+12/18/13 added verbose documentation about where things are positioned in the models, as requested in review
 12/18/13 put pH meter on top of rendering order, allow it to be dragged anywhere in the ScreenView's layoutBounds
 12/18/13 add PHScaleConstants.LAYOUT_BOUNDS, use in all ScreenView constructors
 12/18/13 put probe in foreground in BasicsPHMeterNode, so it can't get lost behind pH display
